# MemoBreeze

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  biome.json  components.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
shared/: types.ts
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  lib.rs  llm.rs  model.rs  permissions.rs  speaker.rs  state.rs  storage.rs  system_audio.mm  system_audio.rs
src-tauri/templates/: default_minutes_prompt.txt  detailed_minutes_prompt.txt
src/components/: LanguageSwitcher.test.tsx  LanguageSwitcher.tsx  ModeToggle.test.tsx  ModeToggle.tsx  theme-provider.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  scroll-area.tsx  select.tsx  switch.tsx  tabs.tsx  textarea.tsx
src/features/main/: GeneratedMinutesDisplay.test.tsx  GeneratedMinutesDisplay.tsx  MainControlCard.test.tsx  MainControlCard.tsx  MainPanel.test.tsx  MainPanel.tsx  MinutesOptionsForm.test.tsx  MinutesOptionsForm.tsx
src/features/recording/: SegmentEditor.test.tsx  SegmentEditor.tsx
src/features/settings/: GoogleDocsSyncCard.test.tsx  GoogleDocsSyncCard.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  VoskSettingsCard.test.tsx  VoskSettingsCard.tsx
src/features/transcript/: TranscriptPanel.test.tsx  TranscriptPanel.tsx
src/hooks/: useTranscriptionListener.test.tsx  useTranscriptionListener.ts
src/lib/: api.test.ts  api.ts  i18n.ts  utils.test.ts  utils.ts
src/locales/en/: translation.json
src/locales/ja/: translation.json
src/stores/: transcript.test.ts  transcript.ts
src/test/: setup.ts  utils.tsx
