[package]
name = "MemoBreeze"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
bytes = "1.6"
cpal = "0.15"
directories = "5.0"
futures = "0.3"
lazy_static = "1.4"
linfa-clustering = { version = "0.7", default-features = false, features = ["serde"] }
linfa = { version = "0.7", default-features = false }
ndarray = { version = "0.15", default-features = false, features = ["std", "serde"] }
rand_core = "0.6"
rand_xoshiro = "0.6"
log = "0.4"
once_cell = "1.19"
parking_lot = "0.12"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
sha2 = "0.10"
base64 = "0.22"
url = "2.5"

[target.'cfg(target_os = "macos")'.dependencies]
vosk = "0.3"
objc2 = "0.6"
objc2-foundation = "0.3"
block2 = "0.6"
